Uses only file names in file widgets AND docstring documentation of utils functions

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
@@ -268,12 +268,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__B.1.__ Install NRP's Virtual Coach"
+    "__B.1.__ Install NRP's [Virtual Coach](https://developer.humanbrainproject.eu/docs/projects/HBP%20Neurorobotics%20Platform/2.0/nrp/user_manual/virtual_coach/introduction.html)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "editable": false,
     "scrolled": true
@@ -289,12 +289,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": true
    },
    "source": [
     "--------------------------------------\n",
-    "__B.2.__ Initialize NRP's Virtual Coach"
+    "__B.2.__ Initialize NRP's  [Virtual Coach](https://developer.humanbrainproject.eu/docs/projects/HBP%20Neurorobotics%20Platform/2.0/nrp/user_manual/virtual_coach/introduction.html)"
    ]
   },
   {
@@ -316,12 +315,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": true
    },
    "source": [
     "--------------------------------------\n",
-    "__B.3.__ The next command will display the list of experiments located in your NRP storage (not to be confused with this Collab storage). <font color=red>\n",
+    "__B.3.__ The next command will display the list of experiments located in your NRP storage (not to be confused with this Collab  <span style=\"background-color: #f6d351\">Storage</span>). <font color=red>\n",
     "    \n",
     "__Important:__</font> check that __*'Exercise1_0'*__, possibly __*'Exercise1_<font color=red>i</font>'*__ if you made *i+1* copies, is one of them."
    ]
@@ -351,26 +349,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "editable": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a3154bf60d84e6f8e7bb60db3e7c83c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Text(value=u'', description=u'Experiment name', layout=Layout(width=u'50%'), placeholder=u'Copy here the exper…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
@@ -397,15 +380,21 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, you can go to the [Neurorobotics Platform](http://148.187.97.48/#/esv-private), check the ***Running Simulations*** tab and join your simulation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": false
    },
    "source": [
     "--------------------------------------\n",
     "__B.5.__ Stop the simulation\n",
     "\n",
-    "You reached the end of this dry run. Stop the simulation with the following command."
+    "You have reached the end of this dry run. Stop the simulation with the following command."
    ]
   },
   {
@@ -436,31 +425,30 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": true
    },
    "source": [
-    "__C.1.__ <font color=blue>From now on, we assume that you correctly implemented the Braitenberg exploration behaviour of the robot.</font>\n",
-    "You will launch __*Exercise 1*__ 's experiment again [(see Section B)](#B) and let the simulation record the robot positions for a sufficiently long time.\n",
+    "__C.1.__ ***From now on, we assume that you correctly implemented the Braitenberg exploration behaviour of the robot.***\n",
     "\n",
-    "You will have to:\n",
+    "You are going to launch __*Exercise 1*__ 's experiment again [(see Section B)](#B) and let the simulation record the robot positions for a sufficiently long time.\n",
     "\n",
-    "- input the name of __*Exercise 1_i*__ according to list of experiments you will see, \n",
+    "To do so, you will have to:\n",
+    "\n",
+    "- input the name of __*Exercise 1_i*__ according to a list of experiments that you will print below, \n",
     "- input __simulation time__ in seconds. A sufficiently long time is not less than __900 seconds__.\n",
     "\n",
-    "Once you have run an experiment, you can join the simulation via the [Neurorobotics Platform](http://148.187.96.224/#/esv-private?dev) and check if the robot does a proper job. In the mean time, a transfer function is recording the robot position every 20 ms into the file __*'robot_positions.csv'*__."
+    "Once you have run an experiment, you can join the simulation via the [Neurorobotics Platform](http://148.187.96.224/#/esv-private?dev) and check if the robot does a proper job. In the mean time, a transfer function is recording the robot position every 20 ms into the file `robot_positions.csv`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": true
    },
    "source": [
     "\n",
     "You need to install the **[HBP Service Client](https://collab.humanbrainproject.eu/#/collab/509/nav/24072)**.\n",
-    "This is a Python API that provides convenient access to Collaboratory's Storage service. We will use it to save the generated file __*'robot_positions.csv'*__ to this Collab storage.\n",
+    "This is a Python API that provides convenient access to Collaboratory's Storage service. We will use it to save the generated file `robot_positions.csv` to this Collab storage.\n",
     "\n",
     "<font color=red>__Important:__</font> Run the cell below everytime you re-open this Jupyter notebook and go over this section"
    ]
@@ -635,11 +623,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": false
    },
    "source": [
-    "**D.2.** Visualization: recorded robot positions as exploration data."
+    "**D.2.** Visualization of recorded robot positions as exploration data."
    ]
   },
   {
