--- a/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb
@@ -15,7 +15,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "editable": false,
     "scrolled": true
    },
    "source": [
@@ -46,7 +45,7 @@
     "--------------------------------------\n",
     "\n",
     "--------------------------------------\n",
-    "## Getting started: solution of Excercise 1 <a id='S'></a>\n",
+    "## Getting started: the solution of Excercise 1 <a id='S'></a>\n",
     "</br><div style=\"text-align: justify\"> This exercise aims at generating a self-organizing map based on the recorded robot positions (`robot_positions.csv` from **Exercise 1**). If you haven't completed Exercise 1, you should follow next steps first:</div>\n",
     "\n",
     "- Join the [Neurorobotics platform](http://148.187.97.48/#/esv-private) and select the __*Templates*__ tab.\n",
@@ -100,8 +99,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A.1. Install SOM utils <a id='A1'></a>\n",
-    "Run the cell below to install SOM utils."
+    "### A.1. Install the SOM utils <a id='A1'></a>\n",
+    "Run the cell below to install the SOM utils."
    ]
   },
   {
@@ -133,17 +132,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download a selected file from your Collab Storage\n",
-    "def download_from_collab_storage(filename, default):\n",
+    "\"\"\"\n",
+    "Download a selected file from your Collab Storage\n",
+    "\n",
+    ":param filename: name of the file to be downloaded\n",
+    ":type filename: str\n",
+    "\"\"\"\n",
+    "def download_from_collab_storage(filename):\n",
     "    print('Downloading...')\n",
     "    clients = get_hbp_service_client()\n",
     "    collab_path = get_collab_storage_path()\n",
-    "    if not filename:\n",
-    "        filename = default\n",
     "    if not filename: \n",
     "        raise ValueError('Missing filename argument')\n",
     "    from os import path\n",
@@ -152,7 +154,13 @@
     "        print('The file \\'%(filename)s\\' has been successfully downloaded. It is located here: ./%(filename)s' % { 'filename': filename})\n",
     "    except Exception:\n",
     "        print('The file \\'%(filename)s\\' couldn\\'t be found in your storage.' % { 'filename': filename})\n",
-    "        \n",
+    "\n",
+    "\"\"\"\n",
+    "Display a widget that takes as input the name of a file to be downloaded \n",
+    "\n",
+    ":param default_filename: filename to be used if no filename is provided\n",
+    ":type default_filename: str\n",
+    "\"\"\"\n",
     "def display_file_widget(default_filename):\n",
     "    import ipywidgets as widgets\n",
     "    from IPython.display import display\n",
@@ -167,44 +175,16 @@
     "    download_button = widgets.Button(description=\"Download\")\n",
     "    display(download_button)\n",
     "    def button_callback(b):\n",
-    "        return download_from_collab_storage(filename=input_file_widget.value, default=default_filename)\n",
+    "        filename = input_file_widget.value if input_file_widget.value else default_filename\n",
+    "        return download_from_collab_storage(filename=filename)\n",
     "    download_button.on_click(button_callback)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00b653487be8420bbaaf8209fa6ff237",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Text(value=u'', description=u'Filename', layout=Layout(width=u'50%'), placeholder=u'robot_positions.csv (defau…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90944cef6b8a4695b26e06ec9bb81d40",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description=u'Download', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display_file_widget('robot_positions.csv')"
    ]
@@ -276,7 +256,7 @@
     "\n",
     "</br><div style=\"text-align: justify\">**Your task** is to implement the SOM algorithm and to apply it to robot positions data set obtained in Exercise 1 (`robot_positions.csv`). The template of the SOM class is located in part [B.2. Complete SOM function (TO DO)](#B2). Once you have filled in all the gaps, you will run the algorithm on the aforementioned data set. </div>\n",
     "\n",
-    "</br><div style=\"text-align: justify\">The **SOM class template** consists of two parts: **1) `Self-Organizing Map initialization`** and **2) `TO DO`**. The first part allows you to run, to initialize and to visualize the SOM ordering and converging processes via **additional functions** (`SOM_additional`) which are already implemented. You shouldn't change these functions. As for the <font color=red>**\"TO DO\" part**</font>, this is  <font color=red>**your assignement**</font>. </div>\n",
+    "</br><div style=\"text-align: justify\">The **SOM class template** consists of two parts: **1) `Self-Organizing Map initialization`** and **2) `TO DO`**. The first part allows you to run, to initialize and to visualize the SOM ordering and converging processes thanks to functions of the `SOM_additional` module. These additional functions are already implemented and you shouldn't change them. As for the <font color=red>**\"TO DO\" part**</font>, this is  <font color=red>**your assignement**</font>. </div>\n",
     "\n",
     "</br><div style=\"text-align: justify\"> The script in [B.2. Complete SOM function (TO DO)](#B2) represents the SOM algorithm which is summarized below.</div>"
    ]
@@ -418,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -443,11 +423,13 @@
     "\t#############################################################################################################\n",
     "    \n",
     "\t# function to initialize 'class SOM'\n",
-    "\tdef __init__(self, display='simulation', csv_file='robot_positions.csv'):\n",
+    "\tdef __init__(self, display='simulation', \n",
+    "                 csv_input_positions='robot_positions.csv', \n",
+    "                 csv_output_lattice='lattice.csv'):\n",
     "\t\tfrom epflx_robox_nrp_utils.SOM.SOM_additional import SOM_additional\n",
-    "\t\tself.somad = SOM_additional()\n",
+    "\t\tself.somad = SOM_additional(csv_output_lattice=csv_output_lattice)\n",
     "\t\tself.display = display\n",
-    "\t\tself.csv_file = csv_file\n",
+    "\t\tself.csv_input_positions = csv_input_positions\n",
     "\t\tself.init_parameters()\n",
     "        \n",
     "\n",
@@ -564,14 +546,28 @@
    "source": [
     "### C.1. Perform SOM training <a id='C1'></a>\n",
     "\n",
-    "Once you have implemented [B.2 The SOM class (TO DO)](#B2), you can perform SOM training. You can run and visualize the training process with the following python commands:\n",
+    "Once you have implemented [B.2 The SOM class (TO DO)](#B2), you can perform SOM training. You can run and visualize the training process and its output with the following python commands:\n",
     "\n",
     "```python\n",
-    "som = SOM(mode_name) # instantiate your SOM class (replace mode_name for 'simulation' or 'visualization')\n",
-    "som.run_som() # run simulation\n",
-    "```\n",
-    "`'simulation'` mode doesn't provide with any visualization;<br>\n",
-    "`'visualization'` mode provides with visualization of SOM deployment state after every trial."
+    "\"\"\"\n",
+    "Run and visualize SOM training\n",
+    "\n",
+    ":param display: visualization mode (optional), either 'visualization' \n",
+    "                to visualize every trail of the training process or 'simulation'\n",
+    "                to visualize only the result, i.e., the final SOM lattice, aka the feature map.\n",
+    "                The default values is 'simulation'\n",
+    "                \n",
+    ":type display: str\n",
+    ":param csv_output_lattice: name of the file where the final SOM lattice will be saved (optional)\n",
+    "                           The default value is 'lattice.csv'  \n",
+    ":type csv_output_lattice: str\n",
+    "\"\"\"\n",
+    "### Example ###\n",
+    "# Instantiate your SOM class\n",
+    "som = SOM(diplay='visualization', csv_output_lattice='lattice.csv') \n",
+    "# Run the simulation and visualize the whole process; the result will be saved into the file 'lattice.csv'\n",
+    "som.run_som() \n",
+    "```"
    ]
   },
   {
@@ -580,7 +576,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "som = SOM('simulation')\n",
+    "som = SOM(display='simulation', csv_output_lattice='lattice.csv')\n",
     "som.run_som()"
    ]
   },
@@ -678,7 +674,7 @@
     "print(\"token retrieved!\")\n",
     "submission_info = {\n",
     "    'subheader': 'Exercise 2',\n",
-    "    'filepath': 'SOM_solution.py',\n",
+    "    'filename': 'SOM_solution.py',\n",
     "    'token': token,\n",
     "    'collab_path': collab_path,\n",
     "    'clients_storage': clients.storage\n",
@@ -686,6 +682,13 @@
     "from epflx_robox_nrp_utils.submission_manager.submission_widget import display_submission_widget\n",
     "display_submission_widget(submission_info)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
