--- a/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb
@@ -112,17 +112,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download a selected file from your Collab Storage\n",
-    "def download_from_collab_storage(filename, default):\n",
+    "\"\"\"\n",
+    "Download a selected file from your Collab Storage\n",
+    "\n",
+    ":param filename: name of the file to be downloaded\n",
+    ":type filename: str\n",
+    "\"\"\"\n",
+    "def download_from_collab_storage(filename):\n",
     "    print('Downloading...')\n",
     "    clients = get_hbp_service_client()\n",
     "    collab_path = get_collab_storage_path()\n",
-    "    if not filename:\n",
-    "        filename = default\n",
     "    if not filename: \n",
     "        raise ValueError('Missing filename argument')\n",
     "    from os import path\n",
@@ -131,10 +134,16 @@
     "        print('The file \\'%(filename)s\\' has been successfully downloaded. It is located here: ./%(filename)s' % { 'filename': filename})\n",
     "    except Exception:\n",
     "        print('The file \\'%(filename)s\\' couldn\\'t be found in your storage.' % { 'filename': filename})\n",
-    "        \n",
     "\n",
-    "def create_file_widget(default_filename):\n",
+    "\"\"\"\n",
+    "Display a widget that takes as input the name of a file to be downloaded \n",
+    "\n",
+    ":param default_filename: filename to be used if no filename is provided\n",
+    ":type default_filename: str\n",
+    "\"\"\"\n",
+    "def display_file_widget(default_filename):\n",
     "    import ipywidgets as widgets\n",
+    "    from IPython.display import display\n",
     "    style = {'description_width': 'initial'}\n",
     "    input_file_widget = widgets.Text(\n",
     "        description='Filename', \n",
@@ -142,22 +151,12 @@
     "        style=style,\n",
     "        layout=widgets.Layout(width='50%')\n",
     "    )\n",
-    "    return input_file_widget\n",
-    "        \n",
-    "def display_file_widgets(default_filenames):\n",
-    "    import ipywidgets as widgets\n",
-    "    from IPython.display import display\n",
-    "    input_file_widgets = []\n",
-    "    for default_filename in default_filenames:\n",
-    "        input_file_widget = create_file_widget(default_filename)\n",
-    "        display(input_file_widget) \n",
-    "        input_file_widgets.append(input_file_widget)\n",
-    "    \n",
+    "    display(input_file_widget)\n",
     "    download_button = widgets.Button(description=\"Download\")\n",
     "    display(download_button)\n",
     "    def button_callback(b):\n",
-    "        for fw, df in zip(input_file_widgets, default_filenames):\n",
-    "            download_from_collab_storage(filename=str(fw.value), default=df)\n",
+    "        filename = input_file_widget.value if input_file_widget.value else default_filename\n",
+    "        return download_from_collab_storage(filename=filename)\n",
     "    download_button.on_click(button_callback)"
    ]
   },
@@ -911,7 +910,7 @@
     "print(\"token retrieved!\")\n",
     "submission_info = {\n",
     "    'subheader': 'Exercise 3',\n",
-    "    'filepath': 'SARSA_solution.py',\n",
+    "    'filename': 'SARSA_solution.py',\n",
     "    'token': token,\n",
     "    'collab_path': collab_path,\n",
     "    'clients_storage': clients.storage\n",
