Adds workflow diagrams

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise2.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "--------------------------------------\n",
     "## Getting started: the solution of Excercise 1 <a id='S'></a>\n",
-    "</br><div style=\"text-align: justify\"> This exercise aims at generating a self-organizing map based on the recorded robot positions (`robot_positions.csv` from **Exercise 1**). If you haven't completed Exercise 1, you should follow next steps first:</div>\n",
+    "</br><div style=\"text-align: justify\"> This exercise aims at generating a self-organizing map based on the recorded robot positions, i.e., `robot_positions.csv` from **Exercise 1**. If you haven't completed **Exercise 1**, you should follow next steps first:</div>\n",
     "\n",
     "- Join the [Neurorobotics platform](http://148.187.97.48/#/esv-private) and select the __*Templates*__ tab.\n",
     "- Select the experiment whose title starts with ***\"Exercise 2: ...\"*** (you can use the filter at the top right-end corner).\n",
@@ -199,6 +199,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cell below contains the body of the python function `save_to_collab_storage()`. This function will be used repeatedly to save your files into your Collab <span style=\"background-color: #f6d351\">Storage</span>. In case of errors when saving files, check the documentation string of `save_to_collab_storage()`.\n",
+    "\n",
+    "Run the cell below to make `save_to_collab_storage()` available for later use."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -254,7 +263,7 @@
     "### B.1. Description of the SOM class <a id='B1'></a>\n",
     "****\n",
     "\n",
-    "</br><div style=\"text-align: justify\">**Your task** is to implement the SOM algorithm and to apply it to robot positions data set obtained in Exercise 1 (`robot_positions.csv`). The template of the SOM class is located in part [B.2. Complete SOM function (TO DO)](#B2). Once you have filled in all the gaps, you will run the algorithm on the aforementioned data set. </div>\n",
+    "</br><div style=\"text-align: justify\">**Your task** is to implement the SOM algorithm and to apply it tp the dataset `robot_positions.csv` obtained in **Exercise 1**. The template of the SOM class is located in part [B.2. Complete SOM function (TO DO)](#B2). Once you have filled in all the gaps, you will run the algorithm on the aforementioned data set. </div>\n",
     "\n",
     "</br><div style=\"text-align: justify\">The **SOM class template** consists of two parts: **1) `Self-Organizing Map initialization`** and **2) `TO DO`**. The first part allows you to run, to initialize and to visualize the SOM ordering and converging processes thanks to functions of the `SOM_additional` module. These additional functions are already implemented and you shouldn't change them. As for the <font color=red>**\"TO DO\" part**</font>, this is  <font color=red>**your assignement**</font>. </div>\n",
     "\n",
@@ -320,7 +329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "</br><div style=\"text-align: justify\">Let us have a look at the template script in [B.2. The SOM class (TO DO)](#B2). As you can see, the part \"TO DO\" consists of 4 sections to be completed in their natural order. The simulation will be possible only when all parts have been implemented correctly. We believe that the choosen order helps clarify the implementation process. Now it is time <font color=blue>**TO DO**</font> one part after the other: </div>\n",
+    "</br><div style=\"text-align: justify\">Let us have a look at the template script in [B.2. The SOM class (TO DO)](#B2). The \"TO DO\" part consists of 4 sections to be completed in their natural order. The simulation will be possible only when all parts have been implemented correctly. We believe that the choosen order helps clarify the implementation process. Now it is time <font color=blue>**TO DO**</font> one part after the other: </div>\n",
     "\n",
     "**Constant parameters: [[1]](#R1)** <br>\n",
     "\n",
@@ -546,7 +555,17 @@
    "source": [
     "### C.1. Perform SOM training <a id='C1'></a>\n",
     "\n",
-    "Once you have implemented [B.2 The SOM class (TO DO)](#B2), you can perform SOM training. You can run and visualize the training process and its output with the following python commands:\n",
+    "You have implemented [B.2 The SOM class (TO DO)](#B2) and you are now in position to perform SOM training. \n",
+    "The worflow of this section is summarized in the picture below.\n",
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/som_run.png)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to run and visualize the training process and its output, use the following python commands:\n",
     "\n",
     "```python\n",
     "\"\"\"\n",
@@ -577,7 +596,7 @@
    "outputs": [],
    "source": [
     "som = SOM(display='simulation', csv_output_lattice='lattice.csv')\n",
-    "som.run_som()"
+    "som.run()"
    ]
   },
   {
@@ -636,6 +655,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In section D, you will evaluate how good your SOM algorithm performs. The worflow is summarized in the picture below.\n",
+    "\n",
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/som_evaluation.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Run the next cell to get a score for your implementation. This score is an average distance between data points (blue dots) and the centers of clusters (red dots) represented as a lattice. The goal of SOM training is to minimize this distance as much as possible."
    ]
   },
@@ -658,7 +686,11 @@
    "source": [
     "## E. Submission and grading\n",
     "\n",
-    "Run the next cell to submit your SOM implementation. Each submission is automatically tested and evaluated. Only the last submission will be taken into account for your grade. <font color=red>**Keep in mind that the grading process has a timeout of 240 seconds.**</font>"
+    "The submission worflow is summarized in the picture below.\n",
+    "\n",
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/som_submission.png)\n",
+    "\n",
+    "In order to submit your SOM implementation, run the next cell. Each submission is automatically tested and evaluated. Only the last submission will be taken into account for your grade. <font color=red>**Keep in mind that the grading process has a timeout of 240 seconds.**</font>"
    ]
   },
   {
@@ -682,17 +714,9 @@
     "from epflx_robox_nrp_utils.submission_manager.submission_widget import display_submission_widget\n",
     "display_submission_widget(submission_info)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
-  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
