--- a/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise3.ipynb
@@ -111,8 +111,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cell below contains the body of two python functions, namely `download_from_collab_storage()` and `display_file_widget()`. These functions will be used to download files from your Collab <span style=\"background-color: #f6d351\">Storage</span>. In case of errors when downloading files, check the documentation strings of these functions.\n",
+    "\n",
+    "Run the cell below to make `display_file_widget()` available for later use."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,6 +174,15 @@
    "metadata": {},
    "source": [
     "### A.3 Utility function to save files into Collab <span style=\"background-color: #f6d351\">Storage</span> <a id='A3'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cell below contains the body of the python function `save_to_collab_storage()`. This function will be used repeatedly to save your files into your Collab <span style=\"background-color: #f6d351\">Storage</span>. In case of errors when saving files, check the documentation string of `save_to_collab_storage()`.\n",
+    "\n",
+    "Run the cell below to make `save_to_collab_storage()` available for later use."
    ]
   },
   {
@@ -440,7 +458,7 @@
     "</br><div style=\"text-align: justify\"> **1)** Keep in mind that <font color=red>**the grading process will run only for a maze of size 12x12**</font>. Feel free to use other sizes for your tests.</div>\n",
     "</br><div style=\"text-align: justify\">**2)** Keep in mind that <font color=red>**the grading process has a timeout of 240 seconds</font>**.</div>\n",
     "</br><div style=\"text-align: justify\">**3)** If you want to save your solution, move to the [C.3. Upload SARSA function into Collab's storage](#C3) to upload it into your Collab <span style=\"background-color: #f6d351\">Storage</span>. </div>\n",
-    "</br><div style=\"text-align: justify\">**4)** If you feel ready to submit, jump to the **[submit](#Su)** cell.</div>\n",
+    "</br><div style=\"text-align: justify\">**4)** When you feel ready to submit, jump to the **[submit](#Su)** cell.</div>\n",
     "\n",
     "---------------------------------------\n",
     "\n",
@@ -707,7 +725,11 @@
     "\n",
     "---------------------------\n",
     "## D. SARSA simulation <a id='D'></a>\n",
-    "In this section, you can test your implementation of [**C.2. Complete the SARSA Class**](#C2) using different modes of visualization. You can also save the results of $Q$-values calculations into a file and upload this file to your Collab <span style=\"background-color: #f6d351\">Storage</span>."
+    "In section D, you will test your implementation of [**C.2. Complete the SARSA Class**](#C2) using different modes of visualization. You will be invited too save the results of $Q$-values calculations into a file and upload this file to your Collab <span style=\"background-color: #f6d351\">Storage</span>.\n",
+    "\n",
+    "The worflow of this section is summarized in the picture below.\n",
+    "\n",
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/sarsa_run.png)"
    ]
   },
   {
@@ -717,16 +739,29 @@
    },
    "source": [
     "### D.1. Perform SARSA training <a id='D1'></a>\n",
-    "Executing the cell below will run [your script](#C2) and simulate your SARSA training implementation. You can visualize this process.\n",
+    "Executing the cell below will run [your script](#C2) and simulate your SARSA training implementation. You can visualize this process using the different modes documented below.\n",
     "```python\n",
-    "sarsa = SARSA(display='simulation') # upload SARSA (possible values of display: 'simulation', 'environment', 'square_maze', 'latency')\n",
-    "sarsa.run_sarsa() # run simulation\n",
+    "\"\"\"\n",
+    "Run and visualize SARSA training\n",
+    "\n",
+    "Function call: run_sarsa(display='simulation)\n",
+    "\n",
+    ":param display: visualization mode (optional), either 'visualization' \n",
+    "                to visualize the robot moves within its actual environment after each step,\n",
+    "                or 'square_maze' to visualize the robot moves within the SOM lattice after each step.\n",
+    "                or 'latency' to plot robot latency, i.e., number of steps needed to reach the goal \n",
+    "                after each episode (the plot is updated every 1000 episodes),\n",
+    "                or 'simulation' to simulate SARSA without visualization\n",
+    "                The default value is 'simulation'.\n",
+    "                \n",
+    ":type display: str\n",
+    "\"\"\"\n",
+    "### Example ###\n",
+    "# Instantiate your SARSA class\n",
+    "sarsa = SARSA(display='simulation')\n",
+    "sarsa.run() # run simulation\n",
     "```\n",
-    "`'simulation'` mode doesn't provide with any visualization;<br>\n",
-    "`'environment'` mode provides with visualization of robot displacement within [real environment](#viz) after every step;<br>\n",
-    "`'square_maze'` mode provides with visualization of robot displacement within [square maze](#viz) representing real environment after every step;<br>\n",
-    "`'latency'` mode provides with plotting of robot latency (number of taken steps) to come to the goal state after every episode (plot update happens every 1000 episodes).<br>\n",
-    "**Remark:** `'environment'` and `'square_maze'` are very consuming time mode recommended only at beginning stage to be sure that robot displaces correctly between states."
+    "**Remark:** `'environment'` and `'square_maze'` are CPU consuming modes. They are recommended only at the earliest stage to check that the robot moves correctly accross states."
    ]
   },
   {
@@ -779,7 +814,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The goal of the SARSA training is to obtain a navigation map based on $Q$-values. Such a map should provide the shortest path between any position of the robot environment and any goal position. The following command collects information about robot movements using this navigation map. By running this comand, you will get the statistics of all robot paths to the goal. You can visualize this process and check how the robot performs."
+    "In Section E, you will evaluate how good your SARSA implementation performs.\n",
+    "Recall that the goal of the SARSA training is to obtain a navigation map based on $Q$-values. In our context, such a map should provide the shortest path between any position of the robot environment and any goal position. \n",
+    "\n",
+    "The commands of the next cell collect information about robot movements using the navigation map. By running the next cell, you will get the statistics of all robot paths to the goal. You can visualize this process and check how the robot performs.\n",
+    "\n",
+    "The worflow of Section E is summarized in the picture below.\n",
+    "\n",
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/sarsa_evaluation.png)"
    ]
   },
   {
@@ -794,12 +836,12 @@
     "sarsaev = SARSA_evaluation()\n",
     "# Run evaluation with specific mode\n",
     "from IPython.display import clear_output\n",
-    "try: display = input(\"To visualize an evaluation prosess, please, input '1': \")\n",
+    "try: display = input(\"To visualize the evaluation process, please, input '1': \")\n",
     "except: display = 0;\n",
     "clear_output()\n",
     "\n",
     "# Analysis\n",
-    "best, good, over, never = sarsaev.run_evaluation(display=display, csv_input_lattice='lattice.csv')\n",
+    "best, good, over, never = sarsaev.run(display=display, csv_input_lattice='lattice.csv')\n",
     "# Statistics\n",
     "print 'Agent came to the goal in', best+good, 'of', best+good+never,'cases.'\n",
     "print 'Agent came to the goal by the shortest way in', best,'cases.'\n",
@@ -815,7 +857,7 @@
     "\n",
     "-----------------------------------------------\n",
     "## F. Robot navigation within the Neurorobotics Platform (NRP) <a id='F'></a>\n",
-    "The goal of this last section is to reuse the SARSA training results in a robotics simulation."
+    "The goal of Section F is to reuse the SARSA training results in a robotics simulation."
    ]
   },
   {
@@ -829,7 +871,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following cell will create the file `waypoints.csv` and fill it with waypoints joining a selected start position and the choosen goal position of the SARSA algorithm."
+    "The following cell will create the file `waypoints.csv` and fill it with waypoints joining a selected start position to the choosen goal position of the SARSA algorithm.\n",
+    "\n",
+    "The worflow of Section F.1 is summarized in the picture below.\n",
+    "\n",
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/sarsa_generate_waypoints.png)"
    ]
   },
   {
@@ -849,7 +895,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### F.2. Save the waypoints your Collab <span style=\"background-color: #f6d351\">Storage</span> <a id='F2'></a>\n",
+    "### F.2. Save the waypoints into your Collab <span style=\"background-color: #f6d351\">Storage</span> <a id='F2'></a>\n",
     "We have just generated a path for the robot navigation within the NRP. \n",
     "This path is now written into the file `waypoints.csv` contained in this Jupyter notebook space. It consists of a sequence if [x,y] coordinates the robot will go through. The following command uploads the `waypoints.csv` into your Collab <span style=\"background-color: #f6d351\">Storage</span>. \n",
     "\n",
@@ -892,7 +938,12 @@
    "metadata": {},
    "source": [
     "## G. Submission and grading\n",
-    "Make sure you have saved your SARSA implementation to your Collab <span style=\"background-color: #f6d351\">Storage</span>, i.e., check the steps of [C.3. Upload your SARSA class implementation into the Collab](#C3). \n",
+    "\n",
+    "The submission worflow is summarized in the picture below.\n",
+    "\n",
+    "![title](https://raw.githubusercontent.com/HBPNeurorobotics/EPFLx-RoboX-Neurorobotics/master/Neurorobotics_MOOC_initialization/notebooks/images/sarsa_submission.png)\n",
+    "\n",
+    "First, make sure you have saved your SARSA implementation to your Collab <span style=\"background-color: #f6d351\">Storage</span>, i.e., check the steps of [C.3. Upload your SARSA class implementation into the Collab](#C3). \n",
     "\n",
     "Then run the next cell to submit your SARSA implementation. Each submission is automatically tested and evaluated. Only the last submission will be taken into account for your grade. <font color=red>**Keep in mind that the grading process has a timeout of 240 seconds</font>**.</div>"
    ]
