[FIX] Turns the widget input of exercise 1 into string (reported by Manos)

--- a/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
+++ b/Neurorobotics_MOOC_initialization/notebooks/exercise1.ipynb
@@ -350,9 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "editable": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
@@ -370,12 +368,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "editable": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "sim = vc.launch_experiment(experiment_widget.value)"
+    "sim = vc.launch_experiment(str(experiment_widget.value))"
    ]
   },
   {
